@@ -1995,7 +1995,7 @@ if [ $HOS = acorn ] ; then
 fi
 needs="init allc allo lisp${LEXE} $interpreted.mem $halfcompiled.mem lispinit.mem manual"
 if [ $HOS = unix -a $CROSS = false ] ; then
-  needs=$needs' modular $(MODULES) full clisp.c'
+  needs=$needs' modular $(MODULES) full clisp.c .clisp .gdbinit'
 fi
 echol "all : $needs"
 echodummyrule all
@@ -2985,7 +2985,7 @@ for f in ANNOUNCE COPYRIGHT GNU-GPL SUMMARY ; do
   echol
 done
 
-for f in NEWS clisp.gif ; do
+for f in NEWS clisp.gif .clisp .gdbinit ; do
   if [ -n "${SRCDIR}" ] ; then
     echol "${f} : ${SRCDIR}${f}"
     echotab "-\$(LN_S) ${SRCDIR}${f} ${f}"
@@ -3585,6 +3585,9 @@ echol "clean5 : clean4"
 echotab "-\$(RM) ANNOUNCE COPYRIGHT GNU-GPL SUMMARY"
 if [ -n "${SRCDIR}" ] ; then
   echotab "-\$(RM) \$(DFILES) modules.h \$(LISPFILES) version.h NEWS clisp.gif"
+  if [ $HOS = unix -a $CROSS = false ] ; then
+    echotab "-\$(RM) .clisp .gdbinit"
+  fi
 else
   echotab "-\$(RM) config.lisp"
 fi
