@@ -1,5 +1,10 @@
 2001-03-18  Bruno Haible  <haible@clisp.cons.org>
 
+	* .clisp: New file.
+	* makemake.in: Link .clisp and .gdbinit into the build dir.
+
+2001-03-18  Bruno Haible  <haible@clisp.cons.org>
+
 	* autoconf/aclocal.m4 (CL_CANONICAL_HOST): Cache $host_alias. Needed
 	by AC_CANONICAL_BUILD. Call config.guess and config.sub via
 	$CONFIG_SHELL if set.
